Fixed UI overlappings

--- a/code/static/pages_css/home_student.css
+++ b/code/static/pages_css/home_student.css
@@ -185,7 +185,7 @@ display: block;
     color: #FFFFFF;
     text-align: center;
     font-size: 20px;
-    margin-top: -35px;
+    margin-top: -8px;
     padding: 3px;
     box-shadow: 10px 0px #888888;
 }
@@ -349,7 +349,7 @@ display: block;
     color: #467a46;
 }
 .notice-heading{
-    margin-top: -15px;
+    margin-top: 10px;
     font-size: 15px;
     font-weight: bold;
     text-align: left;
@@ -384,7 +384,7 @@ display: block;
     overflow-y: scroll;
 }
 .announcement-heading{
-    margin-top: -15px;
+    margin-top: 10px;
     font-size: 15px;
     font-weight: bold;
 }
