--- a/code/static/pages_css/specific_course_student.css
+++ b/code/static/pages_css/specific_course_student.css
@@ -167,7 +167,7 @@ display: block;
     left:0px;
     width: 200px;
     height: 100vh;
-    background: rgb(54, 54, 54);
+    background: rgb(29, 29, 29);
     font-size: 30px;
     text-align: center;
     grid-area: content1;
